# Tchoo

./: README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/sae_backend/: __init__.py
backend/sae_backend/controller/: __init__.py
backend/sae_backend/controller/routes/: __init__.py  end_survey.py  groups.py  question.py  results.py  sessions.py  sso_cas.py  users.py
backend/sae_backend/controller/socket/: __init__.py  codes.py  session.py
backend/sae_backend/model/: __init__.py  config.py  redis_operations.py  security.py  socket_manager.py
backend/sae_backend/model/api/: api_models.py  auth.py
backend/sae_backend/model/database/: __init__.py  connection.py  db_models.py  operations.py
backend/sae_backend/model/database/async_/: __init__.py  exceptions.py  operations.py
backend/tests/: test_async_session.py  test_groups.py  test_question.py  test_redis_ops.py  test_security.py  test_session.py  test_users.py
backend/tests/utils/: testing_auth.py  testing_data.py  testing_database.py
frontend/: Dockerfile
frontend/Tchoo_web/: .env  README.md  eslint.config.js  index.html  meta.env  package-lock.json  package.json  vite.config.js
frontend/Tchoo_web/src/: App.vue  main.js  store.js
frontend/Tchoo_web/src/assets/: main.css
frontend/Tchoo_web/src/components/: ArrowButton.vue  ClearButton.vue  ClearButtonSelector.vue  Gear.vue  Header.vue  Menu.vue  Timer.vue
frontend/Tchoo_web/src/components/finalResults/: FinalResultsTitle.vue  PlayerResultQuestionFalse.vue  PlayerResultQuestionOpen.vue  PlayerResultQuestionTrue.vue  PlayerResults.vue  PlayerResultsDetails.vue
frontend/Tchoo_web/src/components/pages/: 403.vue  404.vue  AllGroups.vue  AllPlayers.vue  AllSurveys.vue  Create.vue  CreateChoice.vue  CreateQuestion.vue  EndSurvey.vue  Group.vue  MainPage.vue  ResultsPlayer.vue  SSOCasLogin.vue  studentPage.vue
frontend/Tchoo_web/src/components/question/: Controls.vue  Question.vue  Timer.vue
frontend/Tchoo_web/src/lib/: auth.js  baseURL.js  constants.js  openAnswersStore.js  requests.js  router.js
frontend/Tchoo_web/src/locales/: en.json  es.json  fr.json  it.json  jp.json  ru.json
frontend/nginx/: config.conf
session-bench/: .env  admin.js  bench.js  common.js  package-lock.json  package.json  user.js
(+24 files in other folders)
